# pyramid_services

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-tests.yml
pyramid_services/: __init__.py
pyramid_services/tests/: test_it.py
src/pyramid_services/: __init__.py
tests/: test_it.py
