[metadata]
name = pyramid_services
version = 2.2
author = Michael Merickel
author_email = pylons-discuss@googlegroups.com
license = MIT
description = A service layer abstraction for the Pyramid Web Framework.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords =
    pyramid
    services
    service layer
    ioc
    container
url = https://github.com/mmerickel/pyramid_services
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pyramid
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir =
     = src
packages = find:
zip_safe = False
install_requires =
    pyramid
    wired >= 0.2
    zope.interface
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov
    webtest
